--- a/index.html
+++ b/index.html
@@ -1,59 +1,99 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="descrption" content="Ejemplo de HTML5">
-    <meta name="keywords" content="HTML5, CSS, JavaScript">
-    <title>Este texto es el titulo del documento</title>
-<link rel="stylesheet" href="misestilos.css">
+    <title>Mi primera web</title>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
+    <table style="width: 500px">
+        <thead>
+            <tr>
+                <th>Producto</th>
+                <th>Precio</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Hola beat</td>
+                <td>Gratis</td>
+            </tr>
+            <tr>
+                <td>Chanchito feliz</td>
+                <td>$19.90</td>
+            </tr>
+            <tr>
+                <td>Chanchito muy feliz</td>
+                <td>$29.90</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <td></td>
+            <td>Total: $48.80</td>
+        </tfoot>
+    </table>
 
-    <header>
-        <h1>Este es el titulo principal del sitio web</h1>
-    </header>
-        <nav>
-            <ul>
-                <li>Principal</li>
-                <li>Fotos</li>
-                <li>Video</li>
-                <li>Contacto</li>
-            </ul>
-        </nav>
-    <section>
-        <article>
-            <header>
-                <hgroup>
-                    <h2>Titulo del mensaje uno</h2>
-                    <h1>Subtitulo del mensaje</h1>
-                </hgroup>
-                <p>publicado 10-12-2011</p>
-            </header>
-            Este es el texto de mi primer mensaje
-            <footer>
-                <p>Comentarios</p>
-            </footer>
-        </article>
-        <article>
-            <header>
-                <hgroup>
-                    <h1>Titulo del mensaje dos</h1>
-                    <h2>Subtitulo del mensaje</h2>
-                </hgroup>
-                <p>publicado 10-12-2011</p>
-            </header>
-            Este es el texto de mi segundo mensaje
-            <footer>
-                <p>Comentarios (0)</p>
-            </footer>
-        </article>
-    </section>
-<aside>
-    <blockquote>Mensaje numero uno</blockquote>
-    <blockquote>Mensaje numero dos</blockquote>
-</aside>
-<footer>
-    Derechos reservados &copy; 2010-2011
-</footer>
+    <!-- ul es lista no ordenada-->
+    <ul>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+        <li>Elemento 4</li>
+    </ul>
+
+    <ol>
+        <li value="50">Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+        <li>Elemento 4</li>        
+        <li>
+            <ol>
+                <li style="list-style-type: lower-roman;">Sub elemento 1</li>
+                <li style="list-style-type: lower-roman;">Sub elemento 2</li>
+                <li style="list-style-type: lower-roman;">Sub elemento 3</li>
+            </ol>
+        </li>
+    </ol>
+
+
+
+    <form action="/formulario" method="POST">
+        <label for="nombre">Nombre</label>
+        <input value="Chanchito" type="text" id="nombre" name="nombre" placeholder="Escribe aqui tú nombre" />
+    <br>
+        <label for="Apellido">Apellido</label>
+        <input value="feliz" type="text" id="apellido" name="apellido" placeholder="Escribe aqui tu apellido" />
+        <br>
+        <label for="comentario">Comentario</label>
+        <textarea cols="50" id="comentario" placeholder="Ingrese comentario" name="comentario">Este es un valor por defecto</textarea>
+        <br>
+        <button type="button"><img src="img/test.png" height="100" />Tipo boton</button>
+        <button type="reset">Tipo reset</button>
+        <button type="submit">Tipo submit</button>
+    </form>
+
+
+    <h1>Mi primer heading</h1>
+    <h2>Mi segundo heading</h2>
+    <h3>Mi tercer heading</h3>
+    <h4>Mi cuarto heading</h4>
+    <h5>Mi quinto heading</h5>
+    <h6>Chanchito feliz</h6>
+    <p>Chanchito feliz esta muy feliz.</p>
+    <p>Chanchito feliz esta triste.</p>
+    <hr>
+    <h2>Chancito felipe</h2>
+    <p>
+        Este texto es <span style="color:blue"> mucho más largo</span> y es para le etiqueta de span!
+        <br>y es mostrar
+    </p>
+    <!--Comentario y noa aparece en el explorador -->
+    <img src="img/test.png" height="400" />
+    <center>Direccion para   <a target="_blank" href="https://www.google.mx">Ir a google</a></center>
+    
+    
 </body>
 </html>
